--- a/.github/workflows/dbdeploy.yml
+++ b/.github/workflows/dbdeploy.yml
@@ -1,31 +1,16 @@
 name: Incremental SQL Deployment
 
-on:
-  push:
-    branches:
-      - main  # Replace with your branch name
-
+run-name: Setting up the Hawthorn database
+on: [push]
 jobs:
-  deploy_to_dev:
+  test-output:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x  # Replace with the desired Python version
-
-      - name: Install dependencies
-        run: pip install mysql-connector-python # Install necessary Python libraries
-
-      - name: Deploy SQL Scripts
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: python sqldbdeploy.py
+    - name: Test Output
+      run: echo "Here is a test"
+  connect-remote:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Show databases
+      run: mysql -h ${{ secrets.DB_HOST }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
