--- a/.github/workflows/dbdeploy.yml
+++ b/.github/workflows/dbdeploy.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Show databases
-      run: mysql -h Local instance MySQL80 --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      run: mysql -h 127.0.0.1 --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
