--- a/.github/workflows/dbdeploy.yml
+++ b/.github/workflows/dbdeploy.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - name: Test Output
       run: echo "Here is a test"
-  connect-remote:
+  connect-db:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
