--- a/.github/workflows/dbdeploy.yml
+++ b/.github/workflows/dbdeploy.yml
@@ -17,4 +17,4 @@ jobs:
           sudo apt-get install mysql-client
           
     - name: Show databases
-      run: mysql -h 127.0.0.1 --port 3306 -u root -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      run: mysql -h 127.0.0.1  -u root -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
