--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -1,9 +1,9 @@
-name: Incremental SQL Deployment testing
+name: Incremental SQL Deployment test3
 
 on:
   push:
     branches:
-      - test2  # Replace with your branch name
+      - test3  # Replace with your branch name
 
 jobs:
   deploy_to_dev:
