--- a/.github/workflows/multi_test8.yml
+++ b/.github/workflows/multi_test8.yml
@@ -1,4 +1,4 @@
-name: Incremental SQL Deployment test7
+name: Incremental SQL Deployment test
 
 run-name: Setting up the  database
 on:
@@ -16,7 +16,7 @@ on:
           -  "prod"
   push:
     branches:
-    -  test7
+    -  test8
 
 jobs:
   deploy_to_dev:
