--- a/.github/workflows/dbtest9.yml
+++ b/.github/workflows/dbtest9.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Deploy SQL Scripts
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST_2 }}
+          DB_PORT: ${{ secrets.DB_PORT_2 }}
+          DB_NAME: ${{ secrets.DB_NAME_2 }}
+          DB_USER: ${{ secrets.DB_USER_2 }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD_2 }}
         run: python sqldbdeploy.py
