--- a/.github/workflows/test7.yml
+++ b/.github/workflows/test7.yml
@@ -39,11 +39,11 @@ jobs:
 
       - name: Deploy SQL Scripts
         env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          #DB_HOST: ${{ secrets.DB_HOST }}
+          #DB_PORT: ${{ secrets.DB_PORT }}
+          #DB_NAME: ${{ secrets.DB_NAME }}
+          #DB_USER: ${{ secrets.DB_USER }}
+          #DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_HOST_2: ${{ secrets.DB_HOST_2 }}
           DB_PORT_2: ${{ secrets.DB_PORT_2 }}
           DB_NAME_2: ${{ secrets.DB_NAME_2 }}
