--- a/.github/workflows/test7.yml
+++ b/.github/workflows/test7.yml
@@ -38,7 +38,7 @@ jobs:
         run: pip install mysql-connector-python GitPython # Install necessary Python libraries
 
       - name: Deploy SQL Scripts
-        env:
+        #env:
           #DB_HOST: ${{ secrets.DB_HOST }}
           #DB_PORT: ${{ secrets.DB_PORT }}
           #DB_NAME: ${{ secrets.DB_NAME }}
